--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   service_registry:
     build:
@@ -21,6 +20,8 @@ services:
       - service_registry
     volumes:
       - ./config.json:/config.json
+    deploy:
+      replicas: 2
 
   peer-2:
     build:
@@ -35,6 +36,8 @@ services:
       - service_registry
     volumes:
       - ./config.json:/config.json
+    deploy:
+      replicas: 2
 
   peer-3:
     build:
@@ -49,3 +52,5 @@ services:
       - service_registry
     volumes:
       - ./config.json:/config.json
+    deploy:
+      replicas: 2
