--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
     hostname: peer-1
     environment:
       - PEER_NAME=peer-1
+      - PEER_BALANCE=1600
     ports:
       - "50052"
     depends_on:
@@ -30,6 +31,7 @@ services:
     hostname: peer-2
     environment:
       - PEER_NAME=peer-2
+      - PEER_BALANCE=1200
     ports:
       - "50053"
     depends_on:
@@ -46,6 +48,7 @@ services:
     hostname: peer-3
     environment:
       - PEER_NAME=peer-3
+      - PEER_BALANCE=800
     ports:
       - "50054"
     depends_on:
@@ -54,3 +57,17 @@ services:
       - ./config.json:/config.json
     deploy:
       replicas: 2
+
+  client:
+    build:
+      context: .
+      dockerfile: DockerFileClient
+    hostname: client
+    environment:
+      - SENDER=peer-1
+      - RECEIVER=peer-3
+      - AMOUNT=500
+    depends_on:
+      - peer-1
+      - peer-2
+      - peer-3
